--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 GlobalDefaultGameMode=/Game/Project7/Core/_Debug/BP_DebugGameMode.BP_DebugGameMode_C
+EditorStartupMap=/Game/Project7/Maps/_Debug/LV_DebugCode_0a.LV_DebugCode_0a
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
