added interactor, interactable with its rpcs

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,11 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Project7/Maps/_Debug/LV_DebugMenu.LV_DebugMenu
+EditorStartupMap=/Game/Project7/Maps/_Debug/LV_DebugMenu.LV_DebugMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Project7/Core/GameModes/GM_MainMenu.GM_MainMenu_C
+GlobalDefaultServerGameMode=/Game/Project7/Core/GameModes/GM_MainMenu.GM_MainMenu_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -9,7 +13,7 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 +D3D12TargetedShaderFormats=PCD3D_SM6
 -D3D11TargetedShaderFormats=PCD3D_SM5
 +D3D11TargetedShaderFormats=PCD3D_SM5
-Compiler=Default
+Compiler=VisualStudio2022
 AudioSampleRate=48000
 AudioCallbackBufferFrameSize=1024
 AudioNumBuffersToEnqueue=1
