--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -16,3 +16,8 @@ bShouldAcquireMissingChunksOnLoad=False
 bShouldWarnAboutInvalidAssets=True
 MetaDataTagsForAssetRegistry=()
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+FullRebuild=True
+UsePakFile=False
+
