added advanced steam online plugin

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -21,3 +21,6 @@ BuildConfiguration=PPBC_Development
 FullRebuild=True
 UsePakFile=False
 
+[/Script/Engine.GameSession]
+bRequiresPushToTalk=True
+
