--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Project7/Maps/_Debug/LV_DebugCode_0a.LV_DebugCode_0a
 GlobalDefaultGameMode=/Game/Project7/Core/_Debug/BP_DebugGameMode.BP_DebugGameMode_C
 EditorStartupMap=/Game/Project7/Maps/_Debug/LV_DebugCode_0a.LV_DebugCode_0a
 
